# questphone

./: .gitignore  .gitmodules  README.md  Readme.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
Launcher/: build.gradle.kts
ai/: .gitignore  build.gradle.kts
ai/src/main/cpp/: CMakeLists.txt  sentencepiece_jni.cpp
ai/src/main/sentencepiece/: .gitignore  build.sh
ai/src/main/sentencepiece/build_arm64-v8a/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
ai/src/main/sentencepiece/build_armeabi-v7a/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
ai/src/main/sentencepiece/build_x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
ai/src/main/sentencepiece/build_x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
ai/src/main/sentencepiece/include/: bpe_model.h  bpe_model_trainer.h  builder.h  char_model.h  char_model_trainer.h  filesystem.h  freelist.h  model_factory.h  model_interface.h  normalizer.h  (+16 more)
app/: .gitignore  build.gradle.kts  google-services.json
app/fdroid/release/: output-metadata.json
app/src/fdroid/kotlin/: AiSnapQuestViewVM.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sentencepiece_jni.cpp
app/src/play/: AndroidManifest.xml
app/src/play/kotlin/: MyFirebaseMessagingService.kt
backend/: build.gradle.kts
backend/src/main/: AndroidManifest.xml
data/: build.gradle.kts
gradle/: libs.versions.toml
(+476 files in other folders)
